Backend/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DIAGONAL
    LLAVEA
    LLAVEC
    STRUCT
    ignore_COMENTARIOMULTILINEA
    ignore_COMENTARIOUNILINEA

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> instrucciones
Rule 2     fininstr -> PUNTOCOMA
Rule 3     instrucciones -> instrucciones instruccion
Rule 4     instrucciones -> instruccion
Rule 5     instruccion -> imprimir_instr fininstr
Rule 6     instruccion -> asignacion_instr fininstr
Rule 7     instruccion -> declaracion_var_instr fininstr
Rule 8     instruccion -> modificar_arreglo fininstr
Rule 9     instruccion -> funciones_instr fininstr
Rule 10    instruccion -> while_instr fininstr
Rule 11    instruccion -> llamada_funcion_instr fininstr
Rule 12    instruccion -> break_instr fininstr
Rule 13    instruccion -> continue_instr fininstr
Rule 14    instruccion -> return_instr fininstr
Rule 15    instruccion -> if_instr fininstr
Rule 16    instruccion -> for_instr fininstr
Rule 17    instruccion -> pop_instr fininstr
Rule 18    instruccion -> push_instr fininstr
Rule 19    instruccion -> error fininstr
Rule 20    expresion -> PARENTESISA expresion PARENTESISC
Rule 21    expresion -> CADENA
Rule 22    expresion -> CARACTER
Rule 23    expresion -> ENTERO
Rule 24    expresion -> DOBLE
Rule 25    expresion -> NOTHING
Rule 26    expresion -> ID
Rule 27    expresion -> bandera
Rule 28    expresion -> expresion MAS expresion
Rule 29    expresion -> expresion MENOS expresion
Rule 30    expresion -> expresion ASTERISCO expresion
Rule 31    expresion -> expresion DIVISION expresion
Rule 32    expresion -> expresion POTENCIA expresion
Rule 33    expresion -> expresion PORCENTAJE expresion
Rule 34    expresion -> expresion IGUALIGUAL expresion
Rule 35    expresion -> expresion DIFERENTE expresion
Rule 36    expresion -> expresion MENOR expresion
Rule 37    expresion -> expresion MAYOR expresion
Rule 38    expresion -> expresion MENORIGUAL expresion
Rule 39    expresion -> expresion MAYORIGUAL expresion
Rule 40    expresion -> expresion AND expresion
Rule 41    expresion -> expresion OR expresion
Rule 42    expresion -> NOT expresion
Rule 43    expresion -> MENOS expresion
Rule 44    expresion -> llamada_funcion_instr
Rule 45    expresion -> CORCHETEA expresiones_coma CORCHETEC
Rule 46    expresion -> acceso_arreglo
Rule 47    expresion -> push_instr
Rule 48    expresion -> pop_instr
Rule 49    expresion -> PARSE PARENTESISA INT64 COMA expresion PARENTESISC
Rule 50    expresion -> PARSE PARENTESISA FLOAT64 COMA expresion PARENTESISC
Rule 51    expresion -> SSTRING PARENTESISA expresion PARENTESISC
Rule 52    pop_instr -> POP NOT PARENTESISA expresion PARENTESISC
Rule 53    push_instr -> PUSH NOT PARENTESISA expresion COMA expresion PARENTESISC
Rule 54    expresiones_coma -> expresiones_coma COMA expresion
Rule 55    expresiones_coma -> expresion
Rule 56    bandera -> TRUE
Rule 57    bandera -> FALSE
Rule 58    tipo -> INT64
Rule 59    tipo -> FLOAT64
Rule 60    tipo -> STRING
Rule 61    tipo -> CHAR
Rule 62    tipo -> BOOL
Rule 63    asignacion_instr -> ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
Rule 64    asignacion_instr -> ID IGUAL expresion
Rule 65    modificar_arreglo -> ID lista_dimensiones IGUAL expresion
Rule 66    acceso_arreglo -> ID lista_dimensiones
Rule 67    lista_dimensiones -> lista_dimensiones CORCHETEA expresion CORCHETEC
Rule 68    lista_dimensiones -> CORCHETEA expresion CORCHETEC
Rule 69    declaracion_var_instr -> LOCAL ID
Rule 70    declaracion_var_instr -> GLOBAL ID
Rule 71    declaracion_var_instr -> ID
Rule 72    declaracion_var_instr -> GLOBAL ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
Rule 73    declaracion_var_instr -> LOCAL ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
Rule 74    declaracion_var_instr -> GLOBAL ID IGUAL expresion
Rule 75    declaracion_var_instr -> LOCAL ID IGUAL expresion
Rule 76    imprimir_instr -> PRINT PARENTESISA PARENTESISC
Rule 77    imprimir_instr -> PRINTLN PARENTESISA PARENTESISC
Rule 78    imprimir_instr -> PRINT PARENTESISA expresiones_coma PARENTESISC
Rule 79    imprimir_instr -> PRINTLN PARENTESISA expresiones_coma PARENTESISC
Rule 80    funciones_instr -> FUNCTION ID PARENTESISA PARENTESISC instrucciones END
Rule 81    funciones_instr -> FUNCTION ID PARENTESISA parametros PARENTESISC instrucciones END
Rule 82    parametros -> parametros COMA parametro
Rule 83    parametros -> parametro
Rule 84    parametro -> ID DOSPUNTOS DOSPUNTOS tipo
Rule 85    parametro -> ID
Rule 86    llamada_funcion_instr -> ID PARENTESISA PARENTESISC
Rule 87    llamada_funcion_instr -> ID PARENTESISA parametros_llamada PARENTESISC
Rule 88    parametros_llamada -> parametros_llamada COMA parametro_llamada
Rule 89    parametros_llamada -> parametro_llamada
Rule 90    parametro_llamada -> expresion
Rule 91    while_instr -> WHILE expresion instrucciones END
Rule 92    for_instr -> FOR declaracion_var_instr IN expresion instrucciones END
Rule 93    for_instr -> FOR declaracion_var_instr IN expresion DOSPUNTOS expresion instrucciones END
Rule 94    return_instr -> RETURN expresion
Rule 95    return_instr -> RETURN
Rule 96    break_instr -> BREAK
Rule 97    continue_instr -> CONTINUE
Rule 98    if_instr -> IF expresion instrucciones END
Rule 99    if_instr -> IF expresion instrucciones elseifs_instr ELSE instrucciones END
Rule 100   if_instr -> IF expresion instrucciones elseifs_instr END
Rule 101   if_instr -> IF expresion instrucciones ELSE instrucciones END
Rule 102   elseifs_instr -> elseifs_instr elseif_instr
Rule 103   elseifs_instr -> elseif_instr
Rule 104   elseif_instr -> ELSEIF expresion instrucciones

Terminals, with rules where they appear

AND                  : 40
ASTERISCO            : 30
BOOL                 : 62
BREAK                : 96
CADENA               : 21
CARACTER             : 22
CHAR                 : 61
COMA                 : 49 50 53 54 82 88
CONTINUE             : 97
CORCHETEA            : 45 67 68
CORCHETEC            : 45 67 68
DIAGONAL             : 
DIFERENTE            : 35
DIVISION             : 31
DOBLE                : 24
DOSPUNTOS            : 63 63 72 72 73 73 84 84 93
ELSE                 : 99 101
ELSEIF               : 104
END                  : 80 81 91 92 93 98 99 100 101
ENTERO               : 23
FALSE                : 57
FLOAT64              : 50 59
FOR                  : 92 93
FUNCTION             : 80 81
GLOBAL               : 70 72 74
ID                   : 26 63 64 65 66 69 70 71 72 73 74 75 80 81 84 85 86 87
IF                   : 98 99 100 101
IGUAL                : 63 64 65 72 73 74 75
IGUALIGUAL           : 34
IN                   : 92 93
INT64                : 49 58
LLAVEA               : 
LLAVEC               : 
LOCAL                : 69 73 75
MAS                  : 28
MAYOR                : 37
MAYORIGUAL           : 39
MENOR                : 36
MENORIGUAL           : 38
MENOS                : 29 43
NOT                  : 42 52 53
NOTHING              : 25
OR                   : 41
PARENTESISA          : 20 49 50 51 52 53 76 77 78 79 80 81 86 87
PARENTESISC          : 20 49 50 51 52 53 76 77 78 79 80 81 86 87
PARSE                : 49 50
POP                  : 52
PORCENTAJE           : 33
POTENCIA             : 32
PRINT                : 76 78
PRINTLN              : 77 79
PUNTOCOMA            : 2
PUSH                 : 53
RETURN               : 94 95
SSTRING              : 51
STRING               : 60
STRUCT               : 
TRUE                 : 56
WHILE                : 91
error                : 19
ignore_COMENTARIOMULTILINEA : 
ignore_COMENTARIOUNILINEA : 

Nonterminals, with rules where they appear

acceso_arreglo       : 46
asignacion_instr     : 6
bandera              : 27
break_instr          : 12
continue_instr       : 13
declaracion_var_instr : 7 92 93
elseif_instr         : 102 103
elseifs_instr        : 99 100 102
expresion            : 20 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 43 49 50 51 52 53 53 54 55 63 64 65 67 68 72 73 74 75 90 91 92 93 93 94 98 99 100 101 104
expresiones_coma     : 45 54 78 79
fininstr             : 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19
for_instr            : 16
funciones_instr      : 9
if_instr             : 15
imprimir_instr       : 5
inicio               : 0
instruccion          : 3 4
instrucciones        : 1 3 80 81 91 92 93 98 99 99 100 101 101 104
lista_dimensiones    : 65 66 67
llamada_funcion_instr : 11 44
modificar_arreglo    : 8
parametro            : 82 83
parametro_llamada    : 88 89
parametros           : 81 82
parametros_llamada   : 87 88
pop_instr            : 17 48
push_instr           : 18 47
return_instr         : 14
tipo                 : 63 72 73 84
while_instr          : 10

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . instrucciones
    (3) instrucciones -> . instrucciones instruccion
    (4) instrucciones -> . instruccion
    (5) instruccion -> . imprimir_instr fininstr
    (6) instruccion -> . asignacion_instr fininstr
    (7) instruccion -> . declaracion_var_instr fininstr
    (8) instruccion -> . modificar_arreglo fininstr
    (9) instruccion -> . funciones_instr fininstr
    (10) instruccion -> . while_instr fininstr
    (11) instruccion -> . llamada_funcion_instr fininstr
    (12) instruccion -> . break_instr fininstr
    (13) instruccion -> . continue_instr fininstr
    (14) instruccion -> . return_instr fininstr
    (15) instruccion -> . if_instr fininstr
    (16) instruccion -> . for_instr fininstr
    (17) instruccion -> . pop_instr fininstr
    (18) instruccion -> . push_instr fininstr
    (19) instruccion -> . error fininstr
    (76) imprimir_instr -> . PRINT PARENTESISA PARENTESISC
    (77) imprimir_instr -> . PRINTLN PARENTESISA PARENTESISC
    (78) imprimir_instr -> . PRINT PARENTESISA expresiones_coma PARENTESISC
    (79) imprimir_instr -> . PRINTLN PARENTESISA expresiones_coma PARENTESISC
    (63) asignacion_instr -> . ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (64) asignacion_instr -> . ID IGUAL expresion
    (69) declaracion_var_instr -> . LOCAL ID
    (70) declaracion_var_instr -> . GLOBAL ID
    (71) declaracion_var_instr -> . ID
    (72) declaracion_var_instr -> . GLOBAL ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (73) declaracion_var_instr -> . LOCAL ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (74) declaracion_var_instr -> . GLOBAL ID IGUAL expresion
    (75) declaracion_var_instr -> . LOCAL ID IGUAL expresion
    (65) modificar_arreglo -> . ID lista_dimensiones IGUAL expresion
    (80) funciones_instr -> . FUNCTION ID PARENTESISA PARENTESISC instrucciones END
    (81) funciones_instr -> . FUNCTION ID PARENTESISA parametros PARENTESISC instrucciones END
    (91) while_instr -> . WHILE expresion instrucciones END
    (86) llamada_funcion_instr -> . ID PARENTESISA PARENTESISC
    (87) llamada_funcion_instr -> . ID PARENTESISA parametros_llamada PARENTESISC
    (96) break_instr -> . BREAK
    (97) continue_instr -> . CONTINUE
    (94) return_instr -> . RETURN expresion
    (95) return_instr -> . RETURN
    (98) if_instr -> . IF expresion instrucciones END
    (99) if_instr -> . IF expresion instrucciones elseifs_instr ELSE instrucciones END
    (100) if_instr -> . IF expresion instrucciones elseifs_instr END
    (101) if_instr -> . IF expresion instrucciones ELSE instrucciones END
    (92) for_instr -> . FOR declaracion_var_instr IN expresion instrucciones END
    (93) for_instr -> . FOR declaracion_var_instr IN expresion DOSPUNTOS expresion instrucciones END
    (52) pop_instr -> . POP NOT PARENTESISA expresion PARENTESISC
    (53) push_instr -> . PUSH NOT PARENTESISA expresion COMA expresion PARENTESISC

    error           shift and go to state 18
    PRINT           shift and go to state 19
    PRINTLN         shift and go to state 20
    ID              shift and go to state 21
    LOCAL           shift and go to state 22
    GLOBAL          shift and go to state 23
    FUNCTION        shift and go to state 24
    WHILE           shift and go to state 25
    BREAK           shift and go to state 26
    CONTINUE        shift and go to state 27
    RETURN          shift and go to state 28
    IF              shift and go to state 29
    FOR             shift and go to state 30
    POP             shift and go to state 31
    PUSH            shift and go to state 32

    inicio                         shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    asignacion_instr               shift and go to state 5
    declaracion_var_instr          shift and go to state 6
    modificar_arreglo              shift and go to state 7
    funciones_instr                shift and go to state 8
    while_instr                    shift and go to state 9
    llamada_funcion_instr          shift and go to state 10
    break_instr                    shift and go to state 11
    continue_instr                 shift and go to state 12
    return_instr                   shift and go to state 13
    if_instr                       shift and go to state 14
    for_instr                      shift and go to state 15
    pop_instr                      shift and go to state 16
    push_instr                     shift and go to state 17

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> instrucciones .
    (3) instrucciones -> instrucciones . instruccion
    (5) instruccion -> . imprimir_instr fininstr
    (6) instruccion -> . asignacion_instr fininstr
    (7) instruccion -> . declaracion_var_instr fininstr
    (8) instruccion -> . modificar_arreglo fininstr
    (9) instruccion -> . funciones_instr fininstr
    (10) instruccion -> . while_instr fininstr
    (11) instruccion -> . llamada_funcion_instr fininstr
    (12) instruccion -> . break_instr fininstr
    (13) instruccion -> . continue_instr fininstr
    (14) instruccion -> . return_instr fininstr
    (15) instruccion -> . if_instr fininstr
    (16) instruccion -> . for_instr fininstr
    (17) instruccion -> . pop_instr fininstr
    (18) instruccion -> . push_instr fininstr
    (19) instruccion -> . error fininstr
    (76) imprimir_instr -> . PRINT PARENTESISA PARENTESISC
    (77) imprimir_instr -> . PRINTLN PARENTESISA PARENTESISC
    (78) imprimir_instr -> . PRINT PARENTESISA expresiones_coma PARENTESISC
    (79) imprimir_instr -> . PRINTLN PARENTESISA expresiones_coma PARENTESISC
    (63) asignacion_instr -> . ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (64) asignacion_instr -> . ID IGUAL expresion
    (69) declaracion_var_instr -> . LOCAL ID
    (70) declaracion_var_instr -> . GLOBAL ID
    (71) declaracion_var_instr -> . ID
    (72) declaracion_var_instr -> . GLOBAL ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (73) declaracion_var_instr -> . LOCAL ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (74) declaracion_var_instr -> . GLOBAL ID IGUAL expresion
    (75) declaracion_var_instr -> . LOCAL ID IGUAL expresion
    (65) modificar_arreglo -> . ID lista_dimensiones IGUAL expresion
    (80) funciones_instr -> . FUNCTION ID PARENTESISA PARENTESISC instrucciones END
    (81) funciones_instr -> . FUNCTION ID PARENTESISA parametros PARENTESISC instrucciones END
    (91) while_instr -> . WHILE expresion instrucciones END
    (86) llamada_funcion_instr -> . ID PARENTESISA PARENTESISC
    (87) llamada_funcion_instr -> . ID PARENTESISA parametros_llamada PARENTESISC
    (96) break_instr -> . BREAK
    (97) continue_instr -> . CONTINUE
    (94) return_instr -> . RETURN expresion
    (95) return_instr -> . RETURN
    (98) if_instr -> . IF expresion instrucciones END
    (99) if_instr -> . IF expresion instrucciones elseifs_instr ELSE instrucciones END
    (100) if_instr -> . IF expresion instrucciones elseifs_instr END
    (101) if_instr -> . IF expresion instrucciones ELSE instrucciones END
    (92) for_instr -> . FOR declaracion_var_instr IN expresion instrucciones END
    (93) for_instr -> . FOR declaracion_var_instr IN expresion DOSPUNTOS expresion instrucciones END
    (52) pop_instr -> . POP NOT PARENTESISA expresion PARENTESISC
    (53) push_instr -> . PUSH NOT PARENTESISA expresion COMA expresion PARENTESISC

    $end            reduce using rule 1 (inicio -> instrucciones .)
    error           shift and go to state 18
    PRINT           shift and go to state 19
    PRINTLN         shift and go to state 20
    ID              shift and go to state 21
    LOCAL           shift and go to state 22
    GLOBAL          shift and go to state 23
    FUNCTION        shift and go to state 24
    WHILE           shift and go to state 25
    BREAK           shift and go to state 26
    CONTINUE        shift and go to state 27
    RETURN          shift and go to state 28
    IF              shift and go to state 29
    FOR             shift and go to state 30
    POP             shift and go to state 31
    PUSH            shift and go to state 32

    instruccion                    shift and go to state 33
    imprimir_instr                 shift and go to state 4
    asignacion_instr               shift and go to state 5
    declaracion_var_instr          shift and go to state 6
    modificar_arreglo              shift and go to state 7
    funciones_instr                shift and go to state 8
    while_instr                    shift and go to state 9
    llamada_funcion_instr          shift and go to state 10
    break_instr                    shift and go to state 11
    continue_instr                 shift and go to state 12
    return_instr                   shift and go to state 13
    if_instr                       shift and go to state 14
    for_instr                      shift and go to state 15
    pop_instr                      shift and go to state 16
    push_instr                     shift and go to state 17

state 3

    (4) instrucciones -> instruccion .

    error           reduce using rule 4 (instrucciones -> instruccion .)
    PRINT           reduce using rule 4 (instrucciones -> instruccion .)
    PRINTLN         reduce using rule 4 (instrucciones -> instruccion .)
    ID              reduce using rule 4 (instrucciones -> instruccion .)
    LOCAL           reduce using rule 4 (instrucciones -> instruccion .)
    GLOBAL          reduce using rule 4 (instrucciones -> instruccion .)
    FUNCTION        reduce using rule 4 (instrucciones -> instruccion .)
    WHILE           reduce using rule 4 (instrucciones -> instruccion .)
    BREAK           reduce using rule 4 (instrucciones -> instruccion .)
    CONTINUE        reduce using rule 4 (instrucciones -> instruccion .)
    RETURN          reduce using rule 4 (instrucciones -> instruccion .)
    IF              reduce using rule 4 (instrucciones -> instruccion .)
    FOR             reduce using rule 4 (instrucciones -> instruccion .)
    POP             reduce using rule 4 (instrucciones -> instruccion .)
    PUSH            reduce using rule 4 (instrucciones -> instruccion .)
    $end            reduce using rule 4 (instrucciones -> instruccion .)
    END             reduce using rule 4 (instrucciones -> instruccion .)
    ELSE            reduce using rule 4 (instrucciones -> instruccion .)
    ELSEIF          reduce using rule 4 (instrucciones -> instruccion .)


state 4

    (5) instruccion -> imprimir_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 35

    fininstr                       shift and go to state 34

state 5

    (6) instruccion -> asignacion_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 35

    fininstr                       shift and go to state 36

state 6

    (7) instruccion -> declaracion_var_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 35

    fininstr                       shift and go to state 37

state 7

    (8) instruccion -> modificar_arreglo . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 35

    fininstr                       shift and go to state 38

state 8

    (9) instruccion -> funciones_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 35

    fininstr                       shift and go to state 39

state 9

    (10) instruccion -> while_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 35

    fininstr                       shift and go to state 40

state 10

    (11) instruccion -> llamada_funcion_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 35

    fininstr                       shift and go to state 41

state 11

    (12) instruccion -> break_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 35

    fininstr                       shift and go to state 42

state 12

    (13) instruccion -> continue_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 35

    fininstr                       shift and go to state 43

state 13

    (14) instruccion -> return_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 35

    fininstr                       shift and go to state 44

state 14

    (15) instruccion -> if_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 35

    fininstr                       shift and go to state 45

state 15

    (16) instruccion -> for_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 35

    fininstr                       shift and go to state 46

state 16

    (17) instruccion -> pop_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 35

    fininstr                       shift and go to state 47

state 17

    (18) instruccion -> push_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 35

    fininstr                       shift and go to state 48

state 18

    (19) instruccion -> error . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 35

    fininstr                       shift and go to state 49

state 19

    (76) imprimir_instr -> PRINT . PARENTESISA PARENTESISC
    (78) imprimir_instr -> PRINT . PARENTESISA expresiones_coma PARENTESISC

    PARENTESISA     shift and go to state 50


state 20

    (77) imprimir_instr -> PRINTLN . PARENTESISA PARENTESISC
    (79) imprimir_instr -> PRINTLN . PARENTESISA expresiones_coma PARENTESISC

    PARENTESISA     shift and go to state 51


state 21

    (63) asignacion_instr -> ID . IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (64) asignacion_instr -> ID . IGUAL expresion
    (71) declaracion_var_instr -> ID .
    (65) modificar_arreglo -> ID . lista_dimensiones IGUAL expresion
    (86) llamada_funcion_instr -> ID . PARENTESISA PARENTESISC
    (87) llamada_funcion_instr -> ID . PARENTESISA parametros_llamada PARENTESISC
    (67) lista_dimensiones -> . lista_dimensiones CORCHETEA expresion CORCHETEC
    (68) lista_dimensiones -> . CORCHETEA expresion CORCHETEC

    IGUAL           shift and go to state 52
    PUNTOCOMA       reduce using rule 71 (declaracion_var_instr -> ID .)
    PARENTESISA     shift and go to state 54
    CORCHETEA       shift and go to state 55

    lista_dimensiones              shift and go to state 53

state 22

    (69) declaracion_var_instr -> LOCAL . ID
    (73) declaracion_var_instr -> LOCAL . ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (75) declaracion_var_instr -> LOCAL . ID IGUAL expresion

    ID              shift and go to state 56


state 23

    (70) declaracion_var_instr -> GLOBAL . ID
    (72) declaracion_var_instr -> GLOBAL . ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (74) declaracion_var_instr -> GLOBAL . ID IGUAL expresion

    ID              shift and go to state 57


state 24

    (80) funciones_instr -> FUNCTION . ID PARENTESISA PARENTESISC instrucciones END
    (81) funciones_instr -> FUNCTION . ID PARENTESISA parametros PARENTESISC instrucciones END

    ID              shift and go to state 58


state 25

    (91) while_instr -> WHILE . expresion instrucciones END
    (20) expresion -> . PARENTESISA expresion PARENTESISC
    (21) expresion -> . CADENA
    (22) expresion -> . CARACTER
    (23) expresion -> . ENTERO
    (24) expresion -> . DOBLE
    (25) expresion -> . NOTHING
    (26) expresion -> . ID
    (27) expresion -> . bandera
    (28) expresion -> . expresion MAS expresion
    (29) expresion -> . expresion MENOS expresion
    (30) expresion -> . expresion ASTERISCO expresion
    (31) expresion -> . expresion DIVISION expresion
    (32) expresion -> . expresion POTENCIA expresion
    (33) expresion -> . expresion PORCENTAJE expresion
    (34) expresion -> . expresion IGUALIGUAL expresion
    (35) expresion -> . expresion DIFERENTE expresion
    (36) expresion -> . expresion MENOR expresion
    (37) expresion -> . expresion MAYOR expresion
    (38) expresion -> . expresion MENORIGUAL expresion
    (39) expresion -> . expresion MAYORIGUAL expresion
    (40) expresion -> . expresion AND expresion
    (41) expresion -> . expresion OR expresion
    (42) expresion -> . NOT expresion
    (43) expresion -> . MENOS expresion
    (44) expresion -> . llamada_funcion_instr
    (45) expresion -> . CORCHETEA expresiones_coma CORCHETEC
    (46) expresion -> . acceso_arreglo
    (47) expresion -> . push_instr
    (48) expresion -> . pop_instr
    (49) expresion -> . PARSE PARENTESISA INT64 COMA expresion PARENTESISC
    (50) expresion -> . PARSE PARENTESISA FLOAT64 COMA expresion PARENTESISC
    (51) expresion -> . SSTRING PARENTESISA expresion PARENTESISC
    (56) bandera -> . TRUE
    (57) bandera -> . FALSE
    (86) llamada_funcion_instr -> . ID PARENTESISA PARENTESISC
    (87) llamada_funcion_instr -> . ID PARENTESISA parametros_llamada PARENTESISC
    (66) acceso_arreglo -> . ID lista_dimensiones
    (53) push_instr -> . PUSH NOT PARENTESISA expresion COMA expresion PARENTESISC
    (52) pop_instr -> . POP NOT PARENTESISA expresion PARENTESISC

    PARENTESISA     shift and go to state 60
    CADENA          shift and go to state 61
    CARACTER        shift and go to state 62
    ENTERO          shift and go to state 63
    DOBLE           shift and go to state 64
    NOTHING         shift and go to state 65
    ID              shift and go to state 66
    NOT             shift and go to state 69
    MENOS           shift and go to state 68
    CORCHETEA       shift and go to state 71
    PARSE           shift and go to state 75
    SSTRING         shift and go to state 76
    TRUE            shift and go to state 77
    FALSE           shift and go to state 78
    PUSH            shift and go to state 32
    POP             shift and go to state 31

    expresion                      shift and go to state 59
    bandera                        shift and go to state 67
    llamada_funcion_instr          shift and go to state 70
    acceso_arreglo                 shift and go to state 72
    push_instr                     shift and go to state 73
    pop_instr                      shift and go to state 74

state 26

    (96) break_instr -> BREAK .

    PUNTOCOMA       reduce using rule 96 (break_instr -> BREAK .)


state 27

    (97) continue_instr -> CONTINUE .

    PUNTOCOMA       reduce using rule 97 (continue_instr -> CONTINUE .)


state 28

    (94) return_instr -> RETURN . expresion
    (95) return_instr -> RETURN .
    (20) expresion -> . PARENTESISA expresion PARENTESISC
    (21) expresion -> . CADENA
    (22) expresion -> . CARACTER
    (23) expresion -> . ENTERO
    (24) expresion -> . DOBLE
    (25) expresion -> . NOTHING
    (26) expresion -> . ID
    (27) expresion -> . bandera
    (28) expresion -> . expresion MAS expresion
    (29) expresion -> . expresion MENOS expresion
    (30) expresion -> . expresion ASTERISCO expresion
    (31) expresion -> . expresion DIVISION expresion
    (32) expresion -> . expresion POTENCIA expresion
    (33) expresion -> . expresion PORCENTAJE expresion
    (34) expresion -> . expresion IGUALIGUAL expresion
    (35) expresion -> . expresion DIFERENTE expresion
    (36) expresion -> . expresion MENOR expresion
    (37) expresion -> . expresion MAYOR expresion
    (38) expresion -> . expresion MENORIGUAL expresion
    (39) expresion -> . expresion MAYORIGUAL expresion
    (40) expresion -> . expresion AND expresion
    (41) expresion -> . expresion OR expresion
    (42) expresion -> . NOT expresion
    (43) expresion -> . MENOS expresion
    (44) expresion -> . llamada_funcion_instr
    (45) expresion -> . CORCHETEA expresiones_coma CORCHETEC
    (46) expresion -> . acceso_arreglo
    (47) expresion -> . push_instr
    (48) expresion -> . pop_instr
    (49) expresion -> . PARSE PARENTESISA INT64 COMA expresion PARENTESISC
    (50) expresion -> . PARSE PARENTESISA FLOAT64 COMA expresion PARENTESISC
    (51) expresion -> . SSTRING PARENTESISA expresion PARENTESISC
    (56) bandera -> . TRUE
    (57) bandera -> . FALSE
    (86) llamada_funcion_instr -> . ID PARENTESISA PARENTESISC
    (87) llamada_funcion_instr -> . ID PARENTESISA parametros_llamada PARENTESISC
    (66) acceso_arreglo -> . ID lista_dimensiones
    (53) push_instr -> . PUSH NOT PARENTESISA expresion COMA expresion PARENTESISC
    (52) pop_instr -> . POP NOT PARENTESISA expresion PARENTESISC

    PUNTOCOMA       reduce using rule 95 (return_instr -> RETURN .)
    PARENTESISA     shift and go to state 60
    CADENA          shift and go to state 61
    CARACTER        shift and go to state 62
    ENTERO          shift and go to state 63
    DOBLE           shift and go to state 64
    NOTHING         shift and go to state 65
    ID              shift and go to state 66
    NOT             shift and go to state 69
    MENOS           shift and go to state 68
    CORCHETEA       shift and go to state 71
    PARSE           shift and go to state 75
    SSTRING         shift and go to state 76
    TRUE            shift and go to state 77
    FALSE           shift and go to state 78
    PUSH            shift and go to state 32
    POP             shift and go to state 31

    expresion                      shift and go to state 79
    bandera                        shift and go to state 67
    llamada_funcion_instr          shift and go to state 70
    acceso_arreglo                 shift and go to state 72
    push_instr                     shift and go to state 73
    pop_instr                      shift and go to state 74

state 29

    (98) if_instr -> IF . expresion instrucciones END
    (99) if_instr -> IF . expresion instrucciones elseifs_instr ELSE instrucciones END
    (100) if_instr -> IF . expresion instrucciones elseifs_instr END
    (101) if_instr -> IF . expresion instrucciones ELSE instrucciones END
    (20) expresion -> . PARENTESISA expresion PARENTESISC
    (21) expresion -> . CADENA
    (22) expresion -> . CARACTER
    (23) expresion -> . ENTERO
    (24) expresion -> . DOBLE
    (25) expresion -> . NOTHING
    (26) expresion -> . ID
    (27) expresion -> . bandera
    (28) expresion -> . expresion MAS expresion
    (29) expresion -> . expresion MENOS expresion
    (30) expresion -> . expresion ASTERISCO expresion
    (31) expresion -> . expresion DIVISION expresion
    (32) expresion -> . expresion POTENCIA expresion
    (33) expresion -> . expresion PORCENTAJE expresion
    (34) expresion -> . expresion IGUALIGUAL expresion
    (35) expresion -> . expresion DIFERENTE expresion
    (36) expresion -> . expresion MENOR expresion
    (37) expresion -> . expresion MAYOR expresion
    (38) expresion -> . expresion MENORIGUAL expresion
    (39) expresion -> . expresion MAYORIGUAL expresion
    (40) expresion -> . expresion AND expresion
    (41) expresion -> . expresion OR expresion
    (42) expresion -> . NOT expresion
    (43) expresion -> . MENOS expresion
    (44) expresion -> . llamada_funcion_instr
    (45) expresion -> . CORCHETEA expresiones_coma CORCHETEC
    (46) expresion -> . acceso_arreglo
    (47) expresion -> . push_instr
    (48) expresion -> . pop_instr
    (49) expresion -> . PARSE PARENTESISA INT64 COMA expresion PARENTESISC
    (50) expresion -> . PARSE PARENTESISA FLOAT64 COMA expresion PARENTESISC
    (51) expresion -> . SSTRING PARENTESISA expresion PARENTESISC
    (56) bandera -> . TRUE
    (57) bandera -> . FALSE
    (86) llamada_funcion_instr -> . ID PARENTESISA PARENTESISC
    (87) llamada_funcion_instr -> . ID PARENTESISA parametros_llamada PARENTESISC
    (66) acceso_arreglo -> . ID lista_dimensiones
    (53) push_instr -> . PUSH NOT PARENTESISA expresion COMA expresion PARENTESISC
    (52) pop_instr -> . POP NOT PARENTESISA expresion PARENTESISC
